go_api/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-handson-go
  labels:
    app: eks-handson-go
spec:
  selector:
    matchLabels:
      app: eks-handson-go
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: eks-handson-go
    spec:
      containers:
      - name: eks-handson-go
        image: ${my_ecr_image}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /hello
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      #   lifecycle:
      #     preStop:
      #       exec:
      #         command: ["/bin/sh", "-c", "sleep 20"]
      # terminationGracePeriodSeconds: 30
