go_api/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-handson-go
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/hello"
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
  labels:
    app: eks-handson-go
spec:
  selector:
    app: eks-handson-go
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
