go_api/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-handson-go
  labels:
    app: eks-handson-go
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /hello
            backend:
              serviceName: eks-handson-go
              servicePort: 8080
